--- a/double.css
+++ b/double.css
@@ -13,3 +13,46 @@ body{
     text-align: center;
     background-color: hsl(244, 38%, 16%);
 }
+.container {
+    width: 550px;
+    height: 450px;
+}
+.header{
+    font-size: 1.2rem;
+    border: solid 2px #ffff;
+    color: #ffff;
+    background-color: #262626;
+    padding: 5px;
+    width: 80%;
+    margin: 20px auto;
+    border-radius: 5px;
+}
+.main-content {
+    width: 100%;
+    height: auto;
+    background-color: #fff;
+    border-radius: 15px;
+    padding: 50px 40px;
+    box-shadow: 0 0 10px;
+}
+.main-content .text-area {
+    font-size: 1.5rem;
+    line-height: 1.5;
+}
+.main-content .person {
+    font-size: 1.6rem;
+    color: red;
+    text-transform: uppercase;
+    margin: 20px;
+}
+.button-area button{
+    background-color: #262626;
+    color: #ffff;
+    font-size: 1.3rem;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.button-area button:active{
+    background-color: lightblue;
+}
